// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for (x
/*a*/
in //b
y) //c
;

for (x in /*a*/ //b
y); //c

for (x /*a*/ in y); //b //c

for (x
//a
in y);

for(x in
//a
y);

for (x
/*a*/
of //b
y) //c
;

for (x of /*a*/ //b
y); //c

for (x /*a*/ of y); //b //c

for (x
//a
of y);

for(x of
//a
y);

=====================================output=====================================
/*a*/
for (x in y); //b //c

for (x /*a*/ in y); //b //c

for (x /*a*/ in y); //b //c

//a
for (x in y);

//a
for (x in y);

/*a*/
for (x of y); //b //c

for (x /*a*/ of y); //b //c

for (x /*a*/ of y); //b //c

//a
for (x of y);

//a
for (x of y);

================================================================================
`;

exports[`continue-and-break-comment-1.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for(;;) {
    continue // comment
    ;
}

for (;;) {
    break // comment
    ;
}

for (const f of []) {
    continue // comment
    ;
}

for (const f of []) {
    break // comment
    ;
}

for (const f in {}) {
    continue // comment
    ;
}

for (const f in {}) {
    break // comment
    ;
}

while(true) {
    continue // comment
    ;
}

while (true) {
    break // comment
    ;
}

do {
    continue // comment
    ;
} while(true);


do {
    break // comment
    ;
} while(true);

label1: for (;;) {
    continue label1 // comment
    ;
}

label2: {
    break label2 // comment
    ;
};

for(;;) {
    continue /* comment */
    ;
}

for (;;) {
    break /* comment */
    ;
}

for (const f of []) {
    continue /* comment */
    ;
}

for (const f of []) {
    break /* comment */
    ;
}

for (const f in {}) {
    continue /* comment */
    ;
}

for (const f in {}) {
    break /* comment */
    ;
}

while(true) {
    continue /* comment */
    ;
}

while (true) {
    break /* comment */
    ;
}

do {
    continue /* comment */
    ;
} while(true);


do {
    break /* comment */
    ;
} while(true);

label1: for (;;) {
    continue label1 /* comment */
    ;
}

label2: {
    break label2 /* comment */
    ;
};

=====================================output=====================================
for (;;) {
  continue; // comment
}

for (;;) {
  break; // comment
}

for (const f of []) {
  continue; // comment
}

for (const f of []) {
  break; // comment
}

for (const f in {}) {
  continue; // comment
}

for (const f in {}) {
  break; // comment
}

while (true) {
  continue; // comment
}

while (true) {
  break; // comment
}

do {
  continue; // comment
} while (true);

do {
  break; // comment
} while (true);

label1: for (;;) {
  continue label1; // comment
}

label2: {
  break label2; // comment
}

for (;;) {
  continue; /* comment */
}

for (;;) {
  break; /* comment */
}

for (const f of []) {
  continue; /* comment */
}

for (const f of []) {
  break; /* comment */
}

for (const f in {}) {
  continue; /* comment */
}

for (const f in {}) {
  break; /* comment */
}

while (true) {
  continue; /* comment */
}

while (true) {
  break; /* comment */
}

do {
  continue; /* comment */
} while (true);

do {
  break; /* comment */
} while (true);

label1: for (;;) {
  continue label1 /* comment */;
}

label2: {
  break label2 /* comment */;
}

================================================================================
`;

exports[`continue-and-break-comment-2.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for(;;) {
    continue
    // comment
    ;
}

for (;;) {
    break
    // comment
    ;
}

for (const f of []) {
    continue
    // comment
    ;
}

for (const f of []) {
    break
    // comment
    ;
}

for (const f in {}) {
    continue
    // comment
    ;
}

for (const f in {}) {
    break
    // comment
    ;
}

while(true) {
    continue
    // comment
    ;
}

while (true) {
    break
    // comment
    ;
}

do {
    continue
    // comment
    ;
} while(true);


do {
    break
    // comment
    ;
} while(true);

label1: for (;;) {
    continue label1
    // comment
    ;
}

label2: {
    break label2
    // comment
    ;
};

for(;;) {
    continue
    /* comment */
    ;
}

for (;;) {
    break
    /* comment */
    ;
}

for (const f of []) {
    continue
    /* comment */
    ;
}

for (const f of []) {
    break
    /* comment */
    ;
}

for (const f in {}) {
    continue
    /* comment */
    ;
}

for (const f in {}) {
    break
    /* comment */
    ;
}

while(true) {
    continue
    /* comment */
    ;
}

while (true) {
    break
    /* comment */
    ;
}

do {
    continue
    /* comment */
    ;
} while(true);


do {
    break
    /* comment */
    ;
} while(true);

label1: for (;;) {
    continue label1
    /* comment */
    ;
}

label2: {
    break label2
    /* comment */
    ;
};

=====================================output=====================================
for (;;) {
  continue;
  // comment
}

for (;;) {
  break;
  // comment
}

for (const f of []) {
  continue;
  // comment
}

for (const f of []) {
  break;
  // comment
}

for (const f in {}) {
  continue;
  // comment
}

for (const f in {}) {
  break;
  // comment
}

while (true) {
  continue;
  // comment
}

while (true) {
  break;
  // comment
}

do {
  continue;
  // comment
} while (true);

do {
  break;
  // comment
} while (true);

label1: for (;;) {
  continue label1;
  // comment
}

label2: {
  break label2;
  // comment
}

for (;;) {
  continue;
  /* comment */
}

for (;;) {
  break;
  /* comment */
}

for (const f of []) {
  continue;
  /* comment */
}

for (const f of []) {
  break;
  /* comment */
}

for (const f in {}) {
  continue;
  /* comment */
}

for (const f in {}) {
  break;
  /* comment */
}

while (true) {
  continue;
  /* comment */
}

while (true) {
  break;
  /* comment */
}

do {
  continue;
  /* comment */
} while (true);

do {
  break;
  /* comment */
} while (true);

label1: for (;;) {
  continue label1;
  /* comment */
}

label2: {
  break label2;
  /* comment */
}

================================================================================
`;

exports[`continue-and-break-comment-without-blocks.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for(;;) continue
// comment
;

for (;;) break
// comment
;

for (const f of []) continue
// comment
;

for (const f of []) break
// comment
;

for (const f in {}) continue
// comment
;

for (const f in {}) break
// comment
;

for(;;) continue // comment
;

for (;;) break // comment
;

for (const f of []) continue // comment
;

for (const f of []) break // comment
;

for (const f in {}) continue // comment
;

for (const f in {}) break // comment
;

for(;;) continue /* comment */
;

for (;;) break /* comment */
;

for (const f of []) continue /* comment */
;

for (const f of []) break /* comment */
;

for (const f in {}) continue /* comment */
;

for (const f in {}) break /* comment */
;

for(;;) continue
/* comment */
;

for (;;) break
/* comment */
;

for (const f of []) continue
/* comment */
;

for (const f of []) break
/* comment */
;

for (const f in {}) continue
/* comment */
;

for (const f in {}) break
/* comment */
;

label1: for (;;) continue label1 /* comment */
;

label1: for (;;) continue label1
/* comment */
;

label1: for (;;) continue label1 // comment
;

label1: for (;;) continue label1
// comment
;

=====================================output=====================================
for (;;)
  continue;
  // comment

for (;;)
  break;
  // comment

for (const f of [])
  continue;
  // comment

for (const f of [])
  break;
  // comment

for (const f in {})
  continue;
  // comment

for (const f in {})
  break;
  // comment

for (;;)
  continue; // comment

for (;;)
  break; // comment

for (const f of [])
  continue; // comment

for (const f of [])
  break; // comment

for (const f in {})
  continue; // comment

for (const f in {})
  break; // comment

for (;;) continue; /* comment */

for (;;) break; /* comment */

for (const f of []) continue; /* comment */

for (const f of []) break; /* comment */

for (const f in {}) continue; /* comment */

for (const f in {}) break; /* comment */

for (;;)
  continue;
  /* comment */

for (;;)
  break;
  /* comment */

for (const f of [])
  continue;
  /* comment */

for (const f of [])
  break;
  /* comment */

for (const f in {})
  continue;
  /* comment */

for (const f in {})
  break;
  /* comment */

label1: for (;;) continue label1 /* comment */;

label1: for (;;)
  continue label1;
  /* comment */

label1: for (;;)
  continue label1; // comment

label1: for (;;)
  continue label1;
  // comment

================================================================================
`;

exports[`for.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for (;;) {}
for (var i = 0; i < 10; ++i) {}

for (;;) 0;
for (var i = 0; i < 10; ++i) 0;

=====================================output=====================================
for (;;) {}
for (var i = 0; i < 10; ++i) {}

for (;;) 0;
for (var i = 0; i < 10; ++i) 0;

================================================================================
`;

exports[`for-in-with-initializer.js [flow] format 1`] = `
"Invalid left-hand side in for-in (3:6)
  1 | // https://github.com/babel/babel/blob/HEAD/packages/babel-generator/test/fixtures/parentheses/in-inside-for/input.js
  2 |
> 3 | for (var a = (b in c) in {});
    |      ^^^^^^^^^^^^^^^^
  4 | for (var a = 1 || (b in c) in {});
  5 | for (var a = 1 + (2 || (b in c)) in {});
  6 | for (var a = (() => b in c) in {});"
`;

exports[`for-in-with-initializer.js [typescript] format 1`] = `
"',' expected. (9:17)
   7 | for (var a = 1 || (() => b in c) in {});
   8 | for (var a = (() => { b in c; }) in {});
>  9 | for (var a = [b in c] in {});
     |                 ^
  10 | for (var a = {b: b in c} in {});
  11 | // Meriyah can't parse
  12 | // for (var a = (x = b in c) => {} in {});
Cause: ',' expected."
`;

exports[`for-in-with-initializer.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/blob/HEAD/packages/babel-generator/test/fixtures/parentheses/in-inside-for/input.js

for (var a = (b in c) in {});
for (var a = 1 || (b in c) in {});
for (var a = 1 + (2 || (b in c)) in {});
for (var a = (() => b in c) in {});
for (var a = 1 || (() => b in c) in {});
for (var a = (() => { b in c; }) in {});
for (var a = [b in c] in {});
for (var a = {b: b in c} in {});
// Meriyah can't parse
// for (var a = (x = b in c) => {} in {});
for (var a = class extends (b in c) {} in {});
for (var a = function (x = b in c) {} in {});

=====================================output=====================================
// https://github.com/babel/babel/blob/HEAD/packages/babel-generator/test/fixtures/parentheses/in-inside-for/input.js

for (var a = (b in c) in {});
for (var a = (1 || b in c) in {});
for (var a = (1 + (2 || b in c)) in {});
for (var a = (() => b in c) in {});
for (var a = (1 || (() => b in c)) in {});
for (var a = (() => {
  b in c;
}) in {});
for (var a = ([b in c]) in {});
for (var a = ({ b: b in c }) in {});
// Meriyah can't parse
// for (var a = (x = b in c) => {} in {});
for (var a = (class extends (b in c) {}) in {});
for (var a = (function (x = b in c) {}) in {});

================================================================================
`;

exports[`in.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for ((x in a);;) {}
for (a=(a in b);;) {}
for (let a = (b in c); ; );
for (a && (b in c); ; );
for (a => (b in c); ; );
function* g() {
  for (yield (a in b); ; );
}
async function f() {
  for (await (a in b); ; );
}
for (a in b) 0;

=====================================output=====================================
for ((x in a); ; ) {}
for (a = (a in b); ; ) {}
for (let a = (b in c); ; );
for (a && (b in c); ; );
for ((a) => (b in c); ; );
function* g() {
  for (yield (a in b); ; );
}
async function f() {
  for (await (a in b); ; );
}
for (a in b) 0;

================================================================================
`;

exports[`parentheses.js [flow] format 1`] = `
"Unexpected token \`=>\`, expected the token \`;\` (11:27)
   9 | for (var a = [b in c];;);
  10 | for (var a = {b: b in c};;);
> 11 | for (var a = (x = b in c) => {};;);
     |                           ^^
  12 | for (var a = class extends (b in c) {};;);
  13 | for (var a = function (x = b in c) {};;);
  14 |"
`;

exports[`parentheses.js [typescript] format 1`] = `
"',' expected. (9:17)
   7 | for (var a = 1 || (() => b in c);;);
   8 | for (var a = (() => { b in c; });;);
>  9 | for (var a = [b in c];;);
     |                 ^
  10 | for (var a = {b: b in c};;);
  11 | for (var a = (x = b in c) => {};;);
  12 | for (var a = class extends (b in c) {};;);
Cause: ',' expected."
`;

exports[`parentheses.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/blob/HEAD/packages/babel-generator/test/fixtures/parentheses/in-inside-for/input.js

for (var a = (b in c);;);
for (var a = 1 || (b in c);;);
for (var a = 1 + (2 || (b in c));;);
for (var a = (() => b in c);;);
for (var a = 1 || (() => b in c);;);
for (var a = (() => { b in c; });;);
for (var a = [b in c];;);
for (var a = {b: b in c};;);
for (var a = (x = b in c) => {};;);
for (var a = class extends (b in c) {};;);
for (var a = function (x = b in c) {};;);

for (var a in (b in c));
for (var a in 1 || (b in c));
for (var a in 1 + (2 || (b in c)));
for (var a in (() => b in c));
for (var a in 1 || (() => b in c));
for (var a in (() => { b in c; }));
for (var a in [b in c]);
for (var a in {b: b in c});
for (var a in (x = b in c) => {});
for (var a in class extends (b in c) {});
for (var a in function (x = b in c) {});

for (;a = (b in c););
for (;a = 1 || (b in c););
for (;a = 1 + (2 || (b in c)););
for (;a = (() => b in c););
for (;a = 1 || (() => b in c););
for (;a = (() => { b in c; }););
for (;a = [b in c];);
for (;a = {b: b in c};);
for (;a = (x = b in c) => {};);
for (;a = class extends (b in c) {};);
for (;a = function (x = b in c) {};);

=====================================output=====================================
// https://github.com/babel/babel/blob/HEAD/packages/babel-generator/test/fixtures/parentheses/in-inside-for/input.js

for (var a = (b in c); ; );
for (var a = 1 || (b in c); ; );
for (var a = 1 + (2 || (b in c)); ; );
for (var a = () => (b in c); ; );
for (var a = 1 || (() => (b in c)); ; );
for (
  var a = () => {
    (b in c);
  };
  ;

);
for (var a = [(b in c)]; ; );
for (var a = { b: (b in c) }; ; );
for (var a = (x = (b in c)) => {}; ; );
for (var a = class extends (b in c) {}; ; );
for (var a = function (x = (b in c)) {}; ; );

for (var a in b in c);
for (var a in 1 || b in c);
for (var a in 1 + (2 || b in c));
for (var a in () => b in c);
for (var a in 1 || (() => b in c));
for (var a in () => {
  b in c;
});
for (var a in [b in c]);
for (var a in { b: b in c });
for (var a in (x = b in c) => {});
for (var a in class extends (b in c) {});
for (var a in function (x = b in c) {});

for (; (a = b in c); );
for (; (a = 1 || b in c); );
for (; (a = 1 + (2 || b in c)); );
for (; (a = () => b in c); );
for (; (a = 1 || (() => b in c)); );
for (
  ;
  (a = () => {
    b in c;
  });

);
for (; (a = [b in c]); );
for (; (a = { b: b in c }); );
for (; (a = (x = b in c) => {}); );
for (; (a = class extends (b in c) {}); );
for (; (a = function (x = b in c) {}); );

================================================================================
`;

exports[`var.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for (a in b) var c = {}; [];

=====================================output=====================================
for (a in b) var c = {};
[];

================================================================================
`;
